# profile.mobile.apps.native.voice.voice-setting

./: AUTHORS  CMakeLists.txt  org.tizen.voice-setting.manifest  org.tizen.voice-setting.xml  project.config
packaging/: org.tizen.voice-setting.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  nb.po  nl.po  (+19 more)
src/: CMakeLists.txt  tts_setting_mgr.c  tts_setting_mgr.h  tts_setting_view.c  tts_setting_view.h  vc_setting_mgr.c  vc_setting_mgr.h  vc_setting_view.c  vc_setting_view.h  voice_setting_language.c  voice_setting_language.h  voice_setting_main.c  voice_setting_main.h
